# modeldiff

./: CHANGELOG.md  README.md  generate_svgs.py  pyproject.toml
examples/: capture_and_diff.py  html_report.py  regression_suite.py  with_quantbench.py
src/modeldiff/: __init__.py  _types.py  capture.py  cli.py  diff.py  drift.py  fingerprint.py  generator.py  html_report.py  parquet.py  plugin.py  report.py  similarity.py  suite.py
tests/: conftest.py  test_capture.py  test_cli.py  test_diff.py  test_drift.py  test_edge_cases.py  test_fingerprint.py  test_generator.py  test_html_report.py  test_parquet.py  test_plugin.py  test_report.py  test_similarity.py  test_suite.py  test_types.py
