[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modeldiff"
version = "0.1.0"
description = "Behavioral regression testing for LLMs. Capture outputs, diff behavior, detect drift — pytest for model upgrades."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{ name = "Zacharie Bhatti" }]
keywords = [
    "llm",
    "regression",
    "testing",
    "model",
    "diff",
    "evaluation",
    "comparison",
    "behavioral",
    "drift",
    "ci-cd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
metrics = ["rouge-score>=0.1.2"]
cli = ["click>=8.0", "rich>=13.0"]
all = ["modeldiff[metrics,cli]"]

[project.urls]
Homepage = "https://github.com/stef41/modeldiff"
Repository = "https://github.com/stef41/modeldiff"
Issues = "https://github.com/stef41/modeldiff/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/modeldiff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
